--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
-colorama==0.4.6
-customtkinter==5.2.2
-darkdetect==0.8.0
-packaging==25.0
-pillow==12.0.0
-qrcode==8.2
-uuid==1.30
+# =============================================================================
+# Student Attendance System - Requirements
+# =============================================================================
+# Cài đặt: pip install -r requirements.txt
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# GUI Framework
+# -----------------------------------------------------------------------------
+customtkinter>=5.2.0        # Modern Tkinter UI framework
+Pillow>=10.0.0              # Image processing
+
+# -----------------------------------------------------------------------------
+# QR Code
+# -----------------------------------------------------------------------------
+qrcode[pil]>=7.4.0          # QR code generation
+opencv-python>=4.8.0        # Camera & QR scanning
+pyzbar>=0.1.9               # QR/Barcode decoding
+
+# -----------------------------------------------------------------------------
+# Security
+# -----------------------------------------------------------------------------
+bcrypt>=4.1.0               # Password hashing
+
+# -----------------------------------------------------------------------------
+# Reports
+# -----------------------------------------------------------------------------
+openpyxl>=3.1.0             # Excel export (.xlsx)
+reportlab>=4.0.0            # PDF generation
+
+# -----------------------------------------------------------------------------
+# Testing (Development)
+# -----------------------------------------------------------------------------
+pytest>=7.4.0               # Testing framework
+pytest-cov>=4.1.0           # Coverage reporting
+
+# -----------------------------------------------------------------------------
+# Development Tools (Optional)
+# -----------------------------------------------------------------------------
+# black>=23.0.0             # Code formatting
+# flake8>=6.1.0             # Linting
+# mypy>=1.5.0               # Type checking
